Bug 462432 - After sending a bug report, drkonqi offers a link to another bug
Summary: After sending a bug report, drkonqi offers a link to another bug
Status: RESOLVED FIXED
Alias: None
Product: drkonqi
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 463778 464393 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-11-30 10:50 UTC by Patrick Silva
Modified: 2023-01-17 11:07 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27
Sentry Crash Report:


Attachments
screenshot (69.95 KB, image/png)
2022-11-30 10:50 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2022-11-30 10:50:19 UTC
Created attachment 154164 [details]
screenshot

SUMMARY
For some reason, drkonqi offered a link to bug 154163 after sending bug 462431.
Please see the attached screenshot.

EXPECTED RESULT
link to the just sent bug

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.26.80
KDE Frameworks Version: 5.101.0
Qt Version: 5.15.7
Graphics Platform: X11
Comment 1 Harald Sitter 2022-11-30 23:08:29 UTC
Very strange. Can't reproduce in a hurry. I wonder what's going on there.
Comment 2 Bug Janitor Service 2022-12-01 21:00:47 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/drkonqi/-/merge_requests/86
Comment 3 Harald Sitter 2022-12-01 21:35:13 UTC
Git commit 4132c93c220e6de74d11b0d5f3522761b88588e4 by Harald Sitter.
Committed on 01/12/2022 at 20:59.
Pushed by sitter into branch 'master'.

pass the bug id not the attachment id to the gui

the latter uniquely identifies the attachment, not the bug!

M  +4    -4    src/bugzillaintegration/bugzillalib.cpp

https://invent.kde.org/plasma/drkonqi/commit/4132c93c220e6de74d11b0d5f3522761b88588e4
Comment 4 Riccardo Robecchi 2022-12-21 09:18:06 UTC
(In reply to Harald Sitter from comment #3)
> Git commit 4132c93c220e6de74d11b0d5f3522761b88588e4 by Harald Sitter.
> Committed on 01/12/2022 at 20:59.
> Pushed by sitter into branch 'master'.
> 
> pass the bug id not the attachment id to the gui
> 
> the latter uniquely identifies the attachment, not the bug!
> 
> M  +4    -4    src/bugzillaintegration/bugzillalib.cpp
> 
> https://invent.kde.org/plasma/drkonqi/commit/
> 4132c93c220e6de74d11b0d5f3522761b88588e4

What version was this fixed in? I just had this happen with drkonqi 5.26.4-0 on KDE neon.
Comment 5 Patrick Silva 2023-01-04 03:39:45 UTC
*** Bug 463778 has been marked as a duplicate of this bug. ***
Comment 6 Harald Sitter 2023-01-17 11:07:05 UTC
*** Bug 464393 has been marked as a duplicate of this bug. ***