pass the bug id not the attachment id to the gui

the latter uniquely identifies the attachment, not the bug!

BUG: 462432